Completed GitHub Page

--- a/github.html
+++ b/github.html
@@ -5,6 +5,64 @@
     <title>Github Lookalike</title>
 </head>
 <body>
-
+    <div id="header">
+        <img src="img/GitHub.png" alt="github logo" width="100" height="100">
+        <ul>
+            <li><a href="">Pull Requests</a></li>
+            <li><a href="">Issues</ahref></li>
+            <li><a href="">Marketplace</a></li>
+            <li><a href="">Explore</a></li>
+        </ul>
+    </div>
+    <div id="codeup-org">
+        <img alt="codeup logo" src="img/codeup.png" width="100" height="100">
+        <h4>Codeup</h4>
+        <ul>
+            <li><a href="">Repos</a> 175</li>
+            <li><a href="">Packages</a></li>
+            <li><a href="">People</ahref> 469</li>
+            <li><a href="">Teams</a> 11</li>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Insights</a></li>
+        </ul>
+    </div>
+    <div id="dev-team">
+        <p>Codeup's dev team</p>
+        <div>
+            <img src="https://fer-uig.glitch.me?uuid=777" alt="user-icon" width="75" height="75" /> <a href="">Kent Beck</a><br>
+            KentBeck<br>
+            Member<br>
+            X team members<br>
+        </div>
+        <div>
+            <img src="https://fer-uig.glitch.me?uuid=999" alt="user-icon" width="75" height="75" /> <a href="">Codeup Staff</a><br>
+            CodeupStaff<br>
+            Member<br>
+            X team members<br>
+        </div>
+        <div>
+            <img src="https://fer-uig.glitch.me?uuid=1" alt="user-icon" width="75" height="75" /> <a href="">Martin F</a><br>
+            MartinF<br>
+            Member<br>
+            X team members<br?
+        </div>
+        <p>© 2020 GitHub, Inc.</p>
+        <ul>
+            <li><a href="">Terms</a></li>
+            <li><a href="">Privacy</a></li>
+            <li><a href="">Security</a></li>
+            <li><a href="">Status</a></li>
+            <li><a href="">Help</a></li>
+        </ul>
+        <img src="img/GitHub.png" alt="GitHub Logo 2" width="45" height="45">
+        <ul>
+            <li><a href="">Contact GitHub</a></li>
+            <li><a href="">Pricing</a></li>
+            <li><a href="">API</a></li>
+            <li><a href="">Training</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">About</a></li>
+        </ul>
+    </div>
 </body>
 </html>
