--- a/campisis.html
+++ b/campisis.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Downtown Dallas | Elm | Campisi's Restaurant | Best Italian & Pizza</title>
 </head>
 <body>
+    <img src="img/campisisrestaurant_logo.png">
+    <img src="img/social_icon_facebook.png">
+    <img src="img/social_icon_instagram.png">
+    <img src="img/social_icon_twitter.png">
+    <div id="header">
+        <ul>
+            <li><a href="" >Menu</li>
+            <li><a href="" >Locations</li>
+            <li><a href="" >Catering</li>
+            <li><a href="" >Banquet</li>
+            <li><a href="" >Community</li>
+            <li><a href="" >History</li>
+            <li><a href="" >Contact</li>
+        </ul>
+    </div>
+    <hr>
 
 </body>
 </html>
