Mostly-complete campisis.html

--- a/campisis.html
+++ b/campisis.html
@@ -11,16 +11,78 @@
     <img src="img/social_icon_twitter.png">
     <div id="header">
         <ul>
-            <li><a href="" >Menu</li>
-            <li><a href="" >Locations</li>
-            <li><a href="" >Catering</li>
-            <li><a href="" >Banquet</li>
-            <li><a href="" >Community</li>
-            <li><a href="" >History</li>
-            <li><a href="" >Contact</li>
+            <li><a href="" >MENU</li>
+            <li><a href="" >LOCATIONS</li>
+            <li><a href="" >CATERING</li>
+            <li><a href="" >BANQUET</li>
+            <li><a href="" >COMMUNITY</li>
+            <li><a href="" >HISTORY</li>
+            <li><a href="" >CONTACT</li>
         </ul>
     </div>
     <hr>
-
+    <div id="banner">
+        <ul>
+            <li><a href="" >RESERVATIONS</li>
+            <li><a href="" >ORDER ONLINE</li>
+            <img src="img/campisis_street.jpg" height="250">
+        </ul>
+    </div>
+    <h1>Campisi's Restaurant - Downtown Dallas</h1>
+    <br>
+    <h2>The Best Italian and Pizza in Downtown Dallas</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/zop8jeoaI-0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div id="yelp-waitlister">
+        <h4>Waitlist</h4>
+        <ul>
+            <li>Check live wait times</li>
+            <li>Join the waitlist</li>
+            <li>Arrive at your table</li>
+            <button type="button">Join the Waitlist</button>
+            <br>
+            Powered by <img src="img/yelp-logo..png" height="35" width="50">
+        </ul>
+    </div>
+    <br>
+    <p>Right in the heart of downtown Dallas, you can find our Elm Street location next door to The Joule Hotel’s
+        garden, which features a<br> stunning, three-story Giant Eyeball. Join us for lunch or dinner on our shady patio
+        or in one of our three dining rooms, we’re serving up <br> delicious homemade Italian food and pizza every day
+        of the week.</p>
+    <div id="banner-2">
+        DINE-IN • TAKE-OUT • DELIVERY • FULL BAR <br>
+        <br>
+        <table>
+            <tr>
+                <th>ADDRESS</th>
+                <th>HOURS</th>
+                <th>PHONE</th>
+            </tr>
+            <tr>
+                <td>1520 Elm Street, Suite 111<br>Dallas,TX 75201</td>
+                <td>11:00 am - 9:00 pm Daily</td>
+                <td>214-752-0141</td>
+            </tr>
+        </table>
+    </div>
+    <br>
+    <p>You can find our Downtown Dallas Italian Restaurant right in the heart of the Main Street District. More
+        specifically, this Campisi’s<br> resides in the Stone Street Gardens, a red brick pedestrian path between Elm
+        Street and Main Street. This little urban oasis has great<br> views of the architecture downtown, a sculpture
+        garden, and plenty of restaurants to choose from. Of course, we hope you choose to<br> visit Campisi’s! Stop by
+        for Happy Hour Monday through Friday and enjoy $5 pizzas and cocktails, $3 beers, and plenty of other<br>
+        discounted prices on many of our popular menu items, like toasted ravioli and calamari. If Happy Hour isn’t your
+        thing, join us for Half<br>Price Wine Nights every Monday and Tuesday. Get 50% off bottles of wine with your
+        homemade pastas and pizzas. Also, uniformed<br> Dallas police officers, firefighters, and paramedics receive
+        50% off their meals anytime.
+    </p><br>
+    <img src="img/elm.jpg">
+    <hr>
+    <img src="img/campisisrestaurant_logo.png">
+    <img src="img/social_icon_facebook.png">
+    <img src="img/social_icon_instagram.png">
+    <img src="img/social_icon_twitter.png">
+    <br>
+    ©Campisi's Restaurants. All Rights Reserved. Website by<a href="https://frozenfire.com/">Frozen Fire</a>.
+    (poorly copied by Michael Meyer)
 </body>
 </html>
