Beginning work on forms exercise

--- a/github.html
+++ b/github.html
@@ -44,7 +44,7 @@
             <img src="https://fer-uig.glitch.me?uuid=1" alt="user-icon" width="75" height="75" /> <a href="">Martin F</a><br>
             MartinF<br>
             Member<br>
-            X team members<br?
+            X team members<br>
         </div>
         <p>© 2020 GitHub, Inc.</p>
         <ul>
