--- a/forms.html
+++ b/forms.html
@@ -5,6 +5,38 @@
     <title>Register With Us</title>
 </head>
 <body>
+    <form method="POST" action="https://request-inspector.glitch.me/">
+        <label for="email">Email: </label>
+        <input id="email" name="email" type="text" placeholder="type email">
+        <br>
 
+        <label for="password">Password: </label>
+        <input id="password" name="password" type="password" placeholder="type password">
+        <br> <br>
+
+        <label for="bio">Bio: </label> <br>
+        <textarea id="bio" name="bio" cols="40" rows="10"></textarea>
+        <br> <br>
+
+        <label>How Did You Hear About Us?</label> <br>
+        <label><input type="checkbox" name="aware" value="billboards">Billboards</label><br>
+        <lable><input type="checkbox" name="aware" value="radio advertisement">Radio Advertisements</lable><br>
+        <label><input type="checkbox" name="aware" value="internet advertisement">Internet Advertisements</label><br>
+        <label><input type="checkbox" name="aware" value="other">Other</label> <br>
+
+        <br>
+        <label for="browser">Which Internet Browser Do You Use?</label>
+        <select name="browser" id="browser">
+            <option value="chrome">Chrome</option>
+            <option value="firefox">Firefox</option>
+            <option value="edge">Microsoft Edge</option>
+            <option value="opera">Opera</option>
+            <option value="safari">Safari</option>
+        </select>
+        <br>
+
+        <br>
+        <input type="submit">
+    </form>
 </body>
 </html>
