Navbar elements and css in place

--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -14,11 +14,14 @@
             <li><a href="">Market</a></li>
             <li><a href="">Jobs</a></li>
             <li><a href="">Follow Us</a></li>
+            <li><a href="#"><i class="fas fa-search"></i></a></li>
+            <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+            <li><a href="#"><i class="fas fa-user-circle"></i></a></li>
         </ul>
         <section>
-            <a href="#"><i class="fas fa-search"></i></a>
-            <a href="#"><i class="fas fa-shopping-cart"></i></a>
-            <a href="#"><i class="fas fa-user-circle"></i></a>
+
+
+
         </section>
     </nav>
 </body>
