--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -5,6 +5,7 @@
     <title>Flexbox Nav Exercise</title>
     <link rel="stylesheet" href="css/flexbox-nav-exercise.css">
     <script src="https://kit.fontawesome.com/3795b2a3f5.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Work+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -18,11 +19,7 @@
             <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
             <li><a href="#"><i class="fas fa-user-circle"></i></a></li>
         </ul>
-        <section>
-
-
-
-        </section>
+        <h2>Logo</h2>
     </nav>
 </body>
 </html>
