--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -21,5 +21,19 @@
         </ul>
         <h2>Logo</h2>
     </nav>
+    <main>
+        <h1>Body Content</h1>
+    </main>
+    <footer>
+        <hr>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Terms of Use</a></li>
+        </ul>
+        <h5>&copy;Copyright. All rights reserved.</h5>
+    </footer>
 </body>
 </html>
