added anchor tag to logo

--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -19,7 +19,7 @@
             <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
             <li><a href="#"><i class="fas fa-user-circle"></i></a></li>
         </ul>
-        <h2>Logo</h2>
+        <h2><a href="">Logo</a></h2>
     </nav>
     <main>
         <h1>Body Content</h1>
