--- a/order-pizza.html
+++ b/order-pizza.html
@@ -29,7 +29,21 @@
             <div class="jumbotron jumbotron-fluid">
                     <h1 class="display-4">Welcome to Pizza World!</h1>
             </div>
+            <h2>Build your own pizza!</h2>
+            <div class="nav nav-tabs">
+                <a class="nav-item nav-link active" href="#">
+                    <span class="badge badge-pill badge-secondary">1</span> Size and Crust
+                </a>
+                <a class="nav-item nav-link" href="#">
+                    <span class="badge badge-pill badge-secondary">2</span> Cheese and Sauce
+                </a>
+                <a class="nav-item nav-link" href="#">
+                    <span class="badge badge-pill badge-secondary">3</span> Toppings
+                </a>
+            </div>
+            <div class="card">
 
+            </div>
         </div>
     </main>
 
