--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -48,11 +48,10 @@
         // TODO: Set text color of li with dbid = 1 to blue
         for (var i = 0; i < listItems.length; i++) {
             var currentLI = listItems[i];
-            if (i % 2 == 0) {
-                currentLI.style.color = "gray";
-            }
             if (listItems[i].getAttribute("data-dbid") === "1") {
                 listItems[i].style.color = "#00c"
+            } else if (i % 2 == 0) {
+                currentLI.style.color = "gray";
             }
         }
 
