--- a/mapbox-api-lec.html
+++ b/mapbox-api-lec.html
@@ -6,20 +6,13 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
 </head>
-<body>
+<body style="height: 100vh; background-color: #333131">
 
 
 <div id='map' style='width: 400px; height: 300px;'></div>
+
 <script src="js/keys.js"></script>
-<script>
-    mapboxgl.accessToken = mapboxToken;
-    var map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/mapbox/streets-v11', // stylesheet location
-        center: [-96.8057, 32.7787], // starting position [lng, lat]
-        zoom: 9 // starting zoom
-    });
-</script>
-<script src="js/mapbox-api-lec.js">
+<script src="js/mapbox-geocoder-utils.js"></script>
+<script src="js/mapbox-api-lec.js"></script>
 </body>
 </html>
