finished selectors exercise

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -5,7 +5,15 @@
     <title>jQuery Exercises</title>
 </head>
 <body>
-
+    <div id="codeup">
+        <h1 id="title" class="header codeup">Dungeons & Dragons</h1>
+        <p id="tagline" class="header codeup">The world's greatest role-playing game</p>
+        <ul id="list" class="">
+            <li id="listed" class="list-item">Gather your party</li>
+            <li class="list-item">Save the world</li>
+            <li class="list-item">Have stupid fun with your stupid friends</li>
+        </ul>
+    </div>
 
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/my-custom-javascript.js"></script>
