--- a/konami.html
+++ b/konami.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Konami Code</title>
 </head>
 <body>
+<h1>Konami Code</h1>
 
+<audio class="hidden" id="sound-effect">
+    <source src="audio/sonic_ring.mp3">
+</audio>
+
+<script src="js/jquery-3.5.1.min.js"></script>
+<script>
+    "use strict";
+
+    var konamiCode = [38, 38, 40, 40, 37, 39, 37, 39, 66, 65, 13];
+    var enteredKeys = [];
+    var codeSound = document.querySelector('#sound-effect')
+
+    function keyChecker() {
+            for (var i = 0; i < enteredKeys.length; i++) {
+                if (enteredKeys[i] !== konamiCode[i]) {
+                    enteredKeys = [];
+                    return false;
+                }
+            }
+            if (enteredKeys.length === 11) {
+                enteredKeys = [];
+                codeSound.play();
+                alert("Konami Code entered! +100 Continues!");
+            }
+    }
+
+    $(document).keyup(function(event){
+        console.log(event.keyCode);
+        console.log(enteredKeys);
+        if (event.keyCode === 38 && enteredKeys.length === 0) {
+            enteredKeys.push(38);
+        } else if (enteredKeys.length >=1) {
+            enteredKeys.push(event.keyCode);
+            keyChecker();
+        }
+    });
+
+
+
+
+
+
+
+</script>
 </body>
 </html>
