--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -53,6 +53,10 @@
     </style>
 </head>
 <body>
+<div id="newsletter">
+    <h1>Would you like to sign up for our newsletter?</h1>
+    <span id="confirm">X</span>
+</div>
 <h2>National Parks Facts</h2>
 <button id="toggler">Show/Hide Answers</button>
 
@@ -100,21 +104,21 @@
 
 <button id="highlight-last-button">Click here to highlight last item</button>
 <h3>Yellowstone National Park</h3>
-<ul>
+<ul style="display: none">
     <li>Yellowstone encompasses 3,472 square miles (2,221,766 acres) which makes it larger than Rhode Island and Delaware combined.</li>
     <li>Yellowstone is home to more than 500 active geysers (more than half the world’s geysers).</li>
     <li>Yellowstone is home to the largest concentration of mammals in the lower 48 states (67 species).</li>
     <li>There are approximately 1,000 miles of hiking trails in Yellowstone.</li>
 </ul>
 <h3>Big Bend National Park</h3>
-<ul>
+<ul style="display: none">
     <li>The Rio Grande river serves not only as the edge of the park, but also the border between the USA and Mexico.</li>
     <li>The name Big Bend comes from a large bend in the Rio Grande River along the park boundary.</li>
     <li>Big Bend National Park has the darkest measured skies in the lower 48 states, and star gazing here is obviously superb.</li>
     <li>There park contains 56 species of reptiles, 75 species of mammals, more than 450 species of birds, along with at least 1,200 species of plants.</li>
 </ul>
 <h3>Everglades National Park</h3>
-<ul>
+<ul style="display: none">
     <li>There are at least nine different ecosystems that work together to sustain life in the Everglades. These include coastal mangroves, pine flatwoods, hardwood hammocks, and freshwater marl prairies.</li>
     <li>The Everglades is home to the Florida Panther, one of the most endangered species on earth. There are currently less than 100 remaining.</li>
     <li>Thick sawgrass covers much of the Everglades terrain; and while it may look soft, the razors can cut through your clothing.</li>
@@ -139,13 +143,17 @@
 <script src="js/jquery-3.5.1.min.js"></script>
 <script>
     $(document).ready(function() {
+        $('#confirm').click(function () {
+            $('#newsletter').hide();
+        });
+
         $("#toggler").click(function () {
             $("dd").toggleClass('invisible');
         });
+
         $("dt").click(function () {
             $(this).toggleClass('highlight');
         });
-
 
         $("#highlight-last-button").click(function () {
             $('ul').each(function () {
@@ -154,20 +162,19 @@
         });
 
         $('h3').click(function () {
-            $('h3').next().children().toggleClass('bold');
+            $(this).next().slideDown();
         });
 
         $('li').click(function() {
             $(this).parent().children().first().css("color", "blue");
         });
 
-        $('#left-button').click(function() {
-            var leftHTML = $('#left-button').parent().first().html();
-            var centerHTML = "";
-
-            console.log(leftHTML);
-        });
-
+        // $('#left-button').click(function() {
+        //     var leftHTML = $('#left-button').parent().first().html();
+        //     var centerHTML = "";
+        //
+        //     console.log(leftHTML);
+        // });
     });
 </script>
 </body>
