finished template for weather cards

--- a/weather_map.html
+++ b/weather_map.html
@@ -8,6 +8,27 @@
 
 </head>
 <body>
+<div id="container" class="container-fluid">
+    <div class="bg-primary text-white p-1 mb-5"><h3 class="display-4">Open Weathermapbox</h3></div>
+    <div id="card-stack" class="row">
+        <div class="col-2">
+            <div class="card">
+                <div class="card-header text-center">-date-</div>
+                <div class="card-body">
+                    <div class="text-center my-2"><strong>-temp/temp-</strong></div>
+                    <div class="text-center my-2">-icon-</div>
+                    <p>Description: <strong>-weather type i.e overcast-</strong></p>
+                    <p>Humidity: <strong>-humidity-</strong></p>
+                    <p>Wind: <strong>-wind-</strong></p>
+                    <p>Pressure: <strong>-pressure-</strong></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 
 <script src="js/keys.js"></script>
 <script src="js/jquery-3.5.1.min.js"></script>
