--- a/weather_map.html
+++ b/weather_map.html
@@ -5,14 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Weather Map</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
+    <style>
+        #map {
+            width: 100%;
+            height: 500px;
+        }
+    </style>
 </head>
 <body>
 <div id="container" class="container-fluid">
-    <div class="bg-primary text-white p-1 mb-5"><h3 class="display-4">Open Weathermapbox</h3></div>
-    <div id="card-stack" class="row d-flex justify-content-around">
+    <div class="bg-primary text-white p-1 mb-3"><h3 class="display-4">Open Weathermapbox</h3></div>
+    <div id="card-stack" class="row d-flex justify-content-around my-3">
 
     </div>
+    <div id="map"></div>
 </div>
 
 
@@ -22,10 +29,19 @@
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
+<script src="js/mapbox-geocoder-utils.js"></script>
+<script>
+
+</script>
+
 <script>
     (function() {
 
-        function mapUpdate(lat, lon) {
+        var lat = 32.7767;
+        var lon = -96.7970;
+
+        function weatherUpdate(lat, lon) {
             $('#card-stack').empty();
             $.get("https://api.openweathermap.org/data/2.5/onecall?lat=" + lat + "&lon=" + lon + "&exclude=current,minutely,hourly&appid=" + OWM_key, {
                 units: 'imperial'
@@ -51,9 +67,31 @@
             });
         };
 
+
+
+        //jQuery and actual code stuff
         $(document).ready(function() {
-            mapUpdate(32.7767, -96.7970);
+            weatherUpdate(lat, lon);
+
+            //mapbox map
+            mapboxgl.accessToken = mapboxToken;
+            var map = new mapboxgl.Map({
+                container: 'map',
+                style: 'mapbox://styles/mapbox/streets-v9',
+                zoom: 10,
+                center: [lon, lat]
+            });
+
+            var marker = new mapboxgl.Marker();
+
+            map.on('click', function(e) {
+                console.log("a click event occurred at " + e.lngLat);
+                marker.setLngLat(e.lngLat).addTo(map);
+                var lngLat = marker.getLngLat();
+                weatherUpdate(lngLat.lat, lngLat.lng)
+            });
         });
+
     })();
 </script>
 </body>
