--- a/weather_map.html
+++ b/weather_map.html
@@ -15,10 +15,15 @@
 </head>
 <body>
 <div id="container" class="container-fluid">
-    <div class="bg-primary text-white p-1 mb-3"><h3 class="display-4">Open Weathermapbox</h3></div>
-    <div id="card-stack" class="row d-flex justify-content-around my-3">
 
+    <div class="bg-primary text-white p-1 mb-3"><h3 class="display-4">Open Weathermapbox</h3></div>
+
+    <div class="form-group">
+        Place <input id="search-text" type="text" class="mx-3"> <button id="search-button" class="btn btn-primary">Find Weather</button>
     </div>
+
+    <div id="card-stack" class="row d-flex justify-content-around my-3"></div>
+
     <div id="map"></div>
 </div>
 
@@ -90,6 +95,16 @@
                 var lngLat = marker.getLngLat();
                 weatherUpdate(lngLat.lat, lngLat.lng)
             });
+
+            $('#search-button').click(function() {
+                var location = $('#search-text').val();
+                console.log(location);
+                geocode(location, mapboxToken).then(function(result) {
+                    map.setCenter(result);
+                    weatherUpdate(result[1], result[0])
+                });
+            })
+
         });
 
     })();
