--- a/weather_map.html
+++ b/weather_map.html
@@ -11,6 +11,9 @@
             width: 100%;
             height: 500px;
         }
+        #card-stack {
+            height: 350px;
+        }
     </style>
 </head>
 <body>
@@ -18,8 +21,8 @@
 
     <div class="bg-primary text-white p-1 mb-3"><h3 class="display-4">Open Weathermapbox</h3></div>
 
-    <div class="form-group">
-        Place <input id="search-text" type="text" class="mx-3"> <button id="search-button" class="btn btn-primary">Find Weather</button>
+    <div class="form-group ml-5">
+        Place <input id="search-text" type="text" class="mx-3" value="Dallas, TX"> <button id="search-button" class="btn btn-primary">Find Weather</button>
     </div>
 
     <div id="card-stack" class="row d-flex justify-content-around my-3"></div>
@@ -51,11 +54,12 @@
             $.get("https://api.openweathermap.org/data/2.5/onecall?lat=" + lat + "&lon=" + lon + "&exclude=current,minutely,hourly&appid=" + OWM_key, {
                 units: 'imperial'
             }).done(function (data) {
-                console.log(data)
                 for (var i = 0; i <= 4; i++) {
+                    var timestamp = Number(new Date(data.daily[i].dt * 1000))
+                    var date = new Date(timestamp).toDateString();
                     $('#card-stack').append("<div class=\"col-2\">\n" +
                         "            <div class=\"card\">\n" +
-                        "                <div class=\"card-header text-center\">" + "-date-" + "</div>\n" +
+                        "                <div class=\"card-header text-center\">" + date + "</div>\n" +
                         "                <div class=\"card-body\">\n" +
                         "                    <div class=\"text-center my-2\"><strong>" + data.daily[i].temp.day + "/" + data.daily[i].temp.night + "&deg;F</strong></div>\n" +
                         "                    <div class=\"text-center my-2\"><img src=\"http://openweathermap.org/img/w/" + data.daily[i].weather[0].icon + ".png\"></div>\n" +
@@ -90,7 +94,6 @@
             var marker = new mapboxgl.Marker();
 
             map.on('click', function(e) {
-                console.log("a click event occurred at " + e.lngLat);
                 marker.setLngLat(e.lngLat).addTo(map);
                 var lngLat = marker.getLngLat();
                 weatherUpdate(lngLat.lat, lngLat.lng)
@@ -98,16 +101,13 @@
 
             $('#search-button').click(function() {
                 var location = $('#search-text').val();
-                console.log(location);
                 geocode(location, mapboxToken).then(function(result) {
                     map.setCenter(result);
                     weatherUpdate(result[1], result[0]);
                     marker.setLngLat(result).addTo(map);
                 });
-            })
-
+            });
         });
-
     })();
 </script>
 </body>
