completed promises exercise

--- a/promises.html
+++ b/promises.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Promises</title>
-    <link rel="script" href="js/promises.js">
     <link href="js/keys.js">
 </head>
 <body>
 
+<script src="js/promises.js"></script>
 </body>
 </html>
